--- a/views/index.ejs
+++ b/views/index.ejs
@@ -28,7 +28,7 @@
                         <ul class="navbar-nav ms-auto mb-2 mb-lg-0 small fw-bolder">
                             <li class="nav-item"><a class="nav-link" href="/">Home</a></li>
                             <li class="nav-item"><a class="nav-link" href="resume.html">Resumen</a></li>
-                            <li class="nav-item"><a class="nav-link" href="projects.html">Contacto</a></li>
+                            <li class="nav-item"><a class="nav-link" href="/contacto">Contacto</a></li>
                             <li class="nav-item"><a class="nav-link" href="/sugerencias">Sugerencias</a></li>
                         </ul>
                     </div>
@@ -46,7 +46,7 @@
                                 <h1 class="display-3 fw-bolder mb-5"><span class="text-gradient d-inline">Imgeniería Mecánica</span></h1>
                                 <div class="d-grid gap-3 d-sm-flex justify-content-sm-center justify-content-xxl-start mb-3">
                                     <a class="btn btn-primary btn-lg px-5 py-3 me-sm-3 fs-6 fw-bolder" href="/administrador">Administrador</a>
-                                    <a class="btn btn-outline-dark btn-lg px-5 py-3 fs-6 fw-bolder" href="projects.html">Visitante</a>
+                                    <a class="btn btn-outline-dark btn-lg px-5 py-3 fs-6 fw-bolder" href="/visitante">Visitante</a>
                                 </div>
                             </div>
                         </div>
@@ -206,7 +206,7 @@
                         <span class="mx-1">&middot;</span>
                         <a class="small" href="#!">Terminos</a>
                         <span class="mx-1">&middot;</span>
-                        <a class="small" href="#!">Contacto</a>
+                        <a class="small" href="/contacto">Contacto</a>
                     </div>
                 </div>
             </div>
