--- a/views/sugerencias.ejs
+++ b/views/sugerencias.ejs
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <meta name="description" content />
         <meta name="author" content />
-        <title>Modern Business - Start Bootstrap Template</title>
+        <title>sugerencias</title>
         <!-- Favicon-->
         <link rel="icon" type="image/x-icon" href="/image/favicon.ico" />
         <!-- Custom Google font-->
@@ -28,7 +28,7 @@
                         <ul class="navbar-nav ms-auto mb-2 mb-lg-0 small fw-bolder">
                             <li class="nav-item"><a class="nav-link" href="/">Home</a></li>
                             <li class="nav-item"><a class="nav-link" href="resume.html">Resumen</a></li>
-                            <li class="nav-item"><a class="nav-link" href="projects.html">Contacto</a></li>
+                            <li class="nav-item"><a class="nav-link" href="/contacto">Contacto</a></li>
                             <li class="nav-item"><a class="nav-link" href="/sugerencias">Sugerencias</a></li>
                         </ul>
                     </div>
@@ -115,7 +115,7 @@
                         <span class="mx-1">&middot;</span>
                         <a class="small" href="#!">Terminos</a>
                         <span class="mx-1">&middot;</span>
-                        <a class="small" href="#!">Contacto</a>
+                        <a class="small" href="/contacto">Contacto</a>
                     </div>
                 </div>
             </div>
